@@ -2,6 +2,12 @@
 
 	* Options.cs:
 	* Commands/Checksum.cs:
+	  Added CRC16 to checksum command.
+
+2015-04-19  Natalia Portillo  <claunia@claunia.com>
+
+	* Options.cs:
+	* Commands/Checksum.cs:
 	* DiscImageChef.csproj:
 	* Checksums/Adler32Context.cs:
 	  Added Adler-32 checksum
